# ADSA

./: Report.docx
Part 1,3,4 (C#)/: AdvancedDatabaseProject.sln
Part 1,3,4 (C#)/AdvancedDatabaseProject/: AVLTreeNode.cs  AdvancedDatabaseProject.csproj  BTree.cs  BinaryTreeNode.cs  Data.cs  Database.cs  Entry.cs  MST.cs  Node.cs  Program.cs
Part 1,3,4 (C#)/AdvancedDatabaseProject/Properties/: AssemblyInfo.cs
Part 2 (C)/: CMakeLists.txt  add.c  algo_td7_8.exe.stackdump  boolean.c  charStar.c  conversions.c  create.c  dijkstra.c  display.c  findAndAdd.c  free.c  gdb.exe.stackdump  main.c  menus.c  my.h  structAlgorithm.c  structGetters.c  structVilleGetters.c
Part 2 (C)/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
Part 2 (C)/nbproject/private/: private.xml
