cmake_minimum_required(VERSION 3.15)
project(Algo_TD7_8)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(Algo_TD7_8
        nbproject/private/c_standard_headers_indexer.c
        nbproject/private/cpp_standard_headers_indexer.cpp
        add.c
        boolean.c
        charStar.c
        conversions.c
        create.c
        dijkstra.c
        display.c
        findAndAdd.c
        free.c
        main.c
        menus.c
        my.h
        structAlgorithm.c
        structGetters.c
        structVilleGetters.c)
